update CHANGELOG and version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,12 @@ v0.1.1
 
 v0.1.2
 	* fix procfile
+
 v0.1.3
 	* improve generators (errors and arguments)
+
 v0.1.4
 	* improve routing
+
+v0.1.5
+	* improve routing (resource and matching)
