fix responder for custom content type
- add params[:content]
- read :content when custom type

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 v0.1.8
 	* improve rendering
 	* add html rendering
+	* improve documentation
+	* improve exceptions
 
 v0.1.7
 	* improve routing error
