--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.1.11
+	* fix regressions from v0.1.10
+	* improve rendering code
+
 v0.1.10
 	* improve status content
 	* add url's parameters like /u/:param
