--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.2.4
+	* improve global coherence (file, class, consts names)
+	* rename directory "controllers/" -> "app/"
+
 v0.2.3
 	* add class params
 	* change file place (controller)
