--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.2.5
+	* improve documentation
+
 v0.2.4
 	* improve global coherence (file, class, consts names)
 	* rename directory "controllers/" -> "app/"
