--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.4.1
+	* fix regression for binary with --debug feature
+	* improve routes generator
+
 v0.4.0
 	* add nephos-status executable
 	* add nephos-generator route option
