--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v0.4.4
+	* improve errors
+	* fix unitary tests about controller generator
+
 v0.4.3
 	* improve gemspec changelog
 	* improve generator
