--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v0.4.7
 	* improve controller generator (names)
 	* add puma to change the default web server
+	* add environments
 
 v0.4.6
 	* improve router errors
