--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v0.5.1
 	* fix nephos gem (binaries can be used out of an application)
 	* improve code documentation (annotations above the methods and classes)
+	* fix content type for json to application/json
 
 v0.5.0
 	* improve executables: version taking in count
