update responder - router connection
- the router doesn't call the controller methods anymore
- the router send to the responder the controller and method to call
- the responder calls the controller's method it self

this modification introduce the cookies handlement. It is not implemented yet

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.5.3
+	* add continuous integration with gitlab
+	* fix executables requirements to be testable
+	* add cookies management
+
 v0.5.2
 	* fix regression on content-type from v0.4
 
