--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+v0.5.4
+	* fix regression on empty response
+	* add unitary tests
+	* improve gemspec
+	* fix severe regression on responder
+	* fix environment bug
+
 v0.5.3
 	* add continuous integration with gitlab
 	* fix executables requirements to be testable
