--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 v0.6.0
 	* add hook before_action and after_action
 	* improve params
+	* improve controller error handlement with STDERR message
 
 v0.5
 	* fix regression on empty response
