Improve daemon system
create new module in bin-helpers to daemonize and handle the daemons out
out the executables

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
 v0.6.0
+	* Improve daemons
+
+v0.6.0
 	* Big change (ea49dfb0b429f03327447477bfee9bef30dda7ad) on the architecture, massive usage of Rack::Request, review the global architecture, update all unitary tests
 	* add hook before_action and after_action
 	* improve params
