--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.6.2
+        * Fix generator (bug when --application on current directory)
+
 v0.6.1
 	* Improve daemons
 	* Improve Rakefile and tests structure
