--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 v0.6.2
         * Fix generator (bug when --application on current directory)
+	* Improve hooks (add the :only option)
+	* Improve documentation
 
 v0.6.1
 	* Improve daemons
