--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.6.3
+        * Add customisable default error page
+
 v0.6.2
         * Fix generator (bug when --application on current directory)
 	* Improve hooks (add the :only option)
