--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+v0.6.5
+	* Improve routing helpers (optional url parameter)
+
 v0.6.4
 	* Fix application generator (replace in the gemfile nephos-server by nephos)
         * Improve guides (more doc, corrections, update)
